tpctk-fs-kube-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tpctk-fs-kube-backend
  labels:
    name: tpctk-fs-kube-backend
