tpctk-fs-kube-backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tpctk-fastapi
  namespace: the-precast-toolkit-fs
spec:
  selector:
    matchLabels:
      app: tpctk-fastapi
  replicas: 3
  template:
    metadata:
      labels:
        app: tpctk-fastapi
    spec:
      containers:
      - name: tpctk-fastapi
        image: milsman2/tpctk-fs-async-backend:v0.9
        ports:
        - containerPort: 8000
          name: tpctk-fastapi
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1"
      nodeSelector:
        nodeCategory: worker
