tpctk-fs-kube-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tpctk-fastapi
  namespace: the-precast-toolkit-fs
spec:
  ports:
  - port: 8000
    name: tpctk-fastapi
  selector:
    app: tpctk-fastapi
