tpctk-fs-kube-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tpctk-fastapi
  namespace: the-precast-toolkit-fs
  annotations:
    cert-manager.io/cluster-issuer: 'prod-issuer-amd64'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fastapi.precasttoolkit.com
    secretName: tpctk-fs-tls-prod-v1
  rules:
  - host: fastapi.precasttoolkit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tpctk-fastapi
            port:
              number: 8000
